delete frontend
